# juno-api

./: .env-example  .gitignore  .prospector.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  example-data.numbers  example-data.xlsx  index.sh  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: static_analysis.yaml
alembic/: env.py
alembic/versions/: 0a81fdc962a1_initial_migration.py  13a62bac8967_initial_migration.py  28b46beac506_init.py  41f7bbbdd032_initial_migration.py  42b08e41c306_add_the_pyament_and_recurring_bill_.py  436378861552_update_naming_convention_for_auto_pay.py  5b8d3e9ed356_initial_migration_with_bill_related_.py  6cad41166421_.py  730c607dcbb0_add_category_table.py  75aa90de5b6f_add_the_bills_table.py  7b4d7df6b4c4_initial_migration.py  7bdcb8555eed_initial_migration.py  8ac23e06b132_b.py  8de71851487e_add_autopay_column.py  8f3082508e84_add_recurringbill_table.py  9af4fb58f7a8_.py  a5e158cf8f43_fix_initial_migration.py  c15cfd9ff290_init.py  d341c376b453_add_base_bill_table_models.py  e1dbc485e705_add_recurrance_interval_column.py  e4bdb430a721_initial_migration.py  f34695f9ed54_add_payment_table.py
app/: conftest.py  main.py  settings.py
app/api/: dependencies.py  deps.py  v1_routes.py
app/controllers/: bill_controller.py  category_controller.py  payment_controller.py  recurring_bill_controller.py
app/core/: config.py
app/crud/: __init__.py
app/db/: db.py  example-data.csv  example_data.csv  juno_db.py  juno_tables.py  seed_juno_db.py
app/exceptions/: controller.py  crud.py
app/lib/: constants.py  exceptions.py
app/models/: __init__.py  account.py  all.py  bill.py  bills.py  camel_case.py  common.py
app/services/: crud.py  recurring_bill_service.py
app/tests/: test_app.py  test_controller_bill.py  test_controller_category.py  test_controller_payment.py  test_crud_bills.py  test_crud_category.py  test_crud_payment.py  test_crud_recurring_bill.py  test_endpoints_bill.py  test_endpoints_category.py  (+2 more)
docker-entrypoint-initdb.d/: init-test-database.sh
juno_api/: main.py
scripts/: connect_to_docker_api.sh  connect_to_postgres.sh  new_migration.sh  run_most_recent_migration.sh  seed_database.sh
tests/: controller_account.py  test_juno_api.py
(+20 files in other folders)
