[tool.poetry]
name = "juno_api"
version = "0.1.0"
description = "The API and DB for juno"
authors = ["Chris Rudnicky 68thandMaine@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "^1.11.1"
asyncpg = "^0.27.0"
commit-linter = "^1.0.2"
fastapi = "^0.98.0"
httpx = "^0.24.1"
psycopg2 = "^2.9.6"
pydantic = "^1.10.9"
python = "^3.10"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
SQLAlchemy = "1.4.41"
uvicorn = "^0.22.0"
anyio = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
